...
    <string name="jump_to_previous">Go Up</string>
    <string name="loading_form">Loading Form</string>
    <string name="load_remote_form_error">Form list download failed</string>
    <string name="location_accuracy">Accuracy: %1$s m</string>
    <string name="location_provider">Location provider: %s</string>
    <string name="manage_files">Delete Saved Form</string>
    <string name="mark_finished">Mark form as finalized</string>
    <string name="noselect_error">Sorry, you have not selected any forms!</string>
    <string name="no_connection">No network connection available</string>
    <string name="no_items_display">Nothing available to display.</string>
    <string name="no_items_display_forms">Nothing available to display.\n\nTry getting and filling out a blank form.</string>
    <string name="no_items_display_sent_forms">Nothing available to display.\n\nTry sending finalized forms before viewing.</string>
    <string name="no_items_display_instances">Nothing available to display.\n\nTry finalizing saved forms before sending.</string>
    <string name="ok">OK</string>
    <string name="parse_error">Sorry, unable to parse form.</string>
    <string name="password">Password</string>
    <string name="play_video">Play Video</string>
    <string name="please_wait">Please wait a few moments.</string>
    <string name="please_wait_long">Please wait. This could take a few minutes.</string>
    <string name="quit_application">Exit %s</string>
    <string name="quit_entry">Save Form and Exit</string>
    <string name="refresh">Refresh</string>
    <string name="group_label">Group</string>
    <string name="repeatable_group_label">Repeatable Group</string>
    <string name="replace_barcode">Replace Barcode</string>
    <string name="required_answer_error">Sorry, this response is required!</string>
    <string name="review_data">Edit Saved Form</string>
...
    <string name="sent_on_date_at_time">\'Sent:\' HH:mm, EEE, MMM dd, yyyy</string> <!-- http://docs.oracle.com/javase/6/docs/api/java/text/SimpleDateFormat.html -->
    <string name="sending_failed_on_date_at_time">\'Sending failed:\' HH:mm, EEE, MMM dd, yyyy</string> <!-- http://docs.oracle.com/javase/6/docs/api/java/text/SimpleDateFormat.html -->
    <string name="deleted_on_date_at_time">\'Deleted:\' HH:mm, EEE, MMM dd, yyyy</string>
    <string name="submission_deleted">Submission deleted</string>
    <string name="version">Version:</string>
    <string name="parent_form_not_present">Unable to edit this saved form because the corresponding blank form is not present or was deleted.\n\nForm ID: %1$s</string>
    <string name="launch_app">Launch</string>
    <string name="no_app">The requested app is not installed</string>
    <string name="select_one">Select One Answer</string>
    <string name="savepoint_used">Unsaved changes recovered from savepoint!</string>
    <string name="save_and_close">Save and Close</string>
    <string name="sign_button">Gather Signature</string>
    <string name="markup_image">Markup Image</string>
...
    <string name="email">Email address</string>
    <string name="user_defined">User-defined</string>
    <string name="device_defined">Device-defined</string>
    <string name="device_id">Device ID</string>
    <string name="subscriber_id">Subscriber ID</string>
    <string name="sim_serial_id">SIM serial number</string>
    <string name="select_date">Select date</string>
    <string name="select_time">Select time</string>
    <string name="no_date_selected">No date selected</string>
    <string name="no_time_selected">No time selected</string>
    <string name="configure_via_qr_code">Configure via QR code</string>
    <string name="qr_code">QR code configuration</string>
    <string name="scan_qr_code_fragment_title">Scan</string>
...
