<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="copyright_message">Copyright © ffem</string>
    <string name="legal_information">Legal Information</string>
    <string name="settings">Settings</string>
    <string name="general">General</string>
    <string name="other">Other</string>
    <string name="info">Info</string>
    <string name="sign_in_to_account">Sign in to your KoBoToolbox account</string>
    <string name="forgot">Forgot?</string>
    <string name="sign_in">Sign In</string>
    <string name="enter_username">Please enter a username</string>
    <string name="enter_password">Please enter a password</string>
    <string name="create_new_account">or create an account</string>
    <string name="delete">Delete</string>
    <string name="delete_forms">Delete Blank or Saved Forms</string>
    <string name="server_credentials">Server credentials</string>
    <string name="outbox">Outbox</string>
    <string name="app_not_found">App not found</string>
    <string name="install_app"><![CDATA[<b>%s</b> app is required for this question.\n\nInstall the app from Play store.]]></string>
    <string name="go_to_play_store">Go to Play store</string>
    <string name="send_form">Send Form</string>
    <string name="admin">Admin</string>

    <string name="delete_sent_forms">Delete Sent Forms</string>

    <!-- App Expiry -->
    <string name="version_expired">Version expired</string>
    <string name="version_has_expired">This version of the app has expired.</string>
    <string name="uninstall_install_from_store">Please uninstall and then install the latest version from Play Store.</string>
</resources>